# Book-Review-Platform-Three-and-Two

./: README.md  pyproject.toml
.github/workflows/: main.yaml
backend/: .coverage  README.md  locust.py  locust_report_stats.csv  locust_report_stats_history.csv  pyproject.toml  test.db
backend/app/: main.py  test.db
backend/app/database/: models.py
backend/app/service/: books.py
backend/tests/: README.md  test_app.py  test_backend.py  tests.py
frontend/: .coverage  .gitignore  README.md  book.py  genre.py  main.py  pyproject.toml  sample_books.py
frontend/app/: book.py  main.py  sample_books.py
frontend/app/models/: book.py  genre.py  review.py  user.py
frontend/app/pages/: auth_page.py  book_page.py
frontend/app/services/: auth.py  auth_service.py  books_service.py  my_auth.py
frontend/app/widgets/: search_form.py  sidebar_user_info.py
frontend/pages/: book_page.py
frontend/tests/: sample_books.py  test_frontend.py
