[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["kamil <almetov.kamil@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
st-star-rating = "^0.0.6"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
