[tool.poetry]
name = "three-and-two"
version = "0.1.0"
description = ""
authors = ["Aisinus <xxxAuronblade277xxx@gmail.com>"]
readme = "README.md"
packages = [
       { include = "app" },
       { include = "app/database" },
       { include = "app/service" }
   ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
httpx = "^0.27.0"
jwt = "^1.3.1"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"