[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["kamil <almetov.kamil@gmail.com>"]
readme = "README.md"
packages = [
       { include = "app" },
       { include = "app/pages" }
   ]


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
st-star-rating = "^0.0.6"
pydantic = "^2.7.1"
httpx = "^0.27.0"
streamlit-oauth = "^0.1.8"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
pyjwt = "^2.8.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
